feat: improve product images and cart integration